--- a/site/index.html
+++ b/site/index.html
@@ -16,12 +16,13 @@
     <div class="fbody">
         <div class="menu" id="main_menu">
             <div id="bkGroundMenu" class="bgMenu"></div>
+
             <ul>
-                <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                <img class="logo" src="Logos/Logo-MIND6.png" alt="">
+                <li class="hover"><a href="index.html">Home</a></li>
                 <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
-                <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
                 <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
-                <li class="hover"><a href="login.html">Login</a></li>
+                <li class="hover"><a href="sobre.html">Sobre nós</a></li>
             </ul>
         </div>
         <div class="laboratorio">
