--- a/site/login.html
+++ b/site/login.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/menu.css">
 
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="icon" href="img/Logo-MIND6.png" type="image/x-icon">
     <title>Faça seu Login</title>
 </head>
@@ -17,11 +17,11 @@
     <div class="menu">
         <div id="bkGroundMenu" class="bgMenu"></div>
         <ul>
+            <img class="logo" src="Logos/Logo-MIND6.png" alt="">
+            <li class="hover"><a href="index.html">Home</a></li>
+            <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
+            <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
             <li class="hover"><a href="sobre.html">Sobre nós</a></li>
-            <li class="hover"><a href="contato.html">Contato</a></li>
-            <li class="logo"><a href="index.html"><img src="Logos/Logo-MIND6.png" alt=""></a></li>
-            <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
-            <li class="hover"><a href="login.html">Login</a></li>
         </ul>
     </div>
     <div class="container-login">
