alterando menu e formulario de contato

--- a/site/contato.html
+++ b/site/contato.html
@@ -24,6 +24,7 @@
                 <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
                 <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                <li class="hover"><a href="">login</a></li>
             </ul>
         </div>
         <div style="width: 100%; height: 100px; background-color: #232323;"></div>
@@ -72,7 +73,7 @@
                         <button type="submit" id="btn_entrar">Enviar</button>
                     </div>
                     <div class="field text-field">
-                        <textarea name="" id="" rows="10" required></textarea>
+                        <textarea placeholder="Digite sua dúvida aqui" name="" id="" rows="10" required></textarea>
                     </div>
                 </div>
             </fieldset>
