--- a/site/controlTec.html
+++ b/site/controlTec.html
@@ -24,6 +24,7 @@
                 <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
                 <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                <li class="hover"><a href="">login</a></li>
             </ul>
         </div>
 
