--- a/site/index.html
+++ b/site/index.html
@@ -20,8 +20,8 @@
             <ul>
                 <img class="logo" src="Logos/Logo-MIND6.png" alt="">
                 <li class="hover"><a href="index.html">Home</a></li>
-                <li class="hover" id="espinafre"><a href="contato.html">Contato</a></li>
-                <li class="hover" id="queota"><a href="controlTec.html">.ControlTec</a></li>
+                <li class="hover"><a href="contato.html">Contato</a></li>
+                <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
                 <li class="hover"><a href="">login</a></li>
             </ul>
