Alterando layout do menu da página sobre nós

--- a/site/index.html
+++ b/site/index.html
@@ -41,18 +41,10 @@
             <div class="control">
                 <img src="logos/Logo-DotControlTec.png" width="40%" alt="">
                 <p align=center>Sistema de monitoramento de computadores escolares</p><br><br><br>
-                <a href="controlTec.html">Saiba mais...</a>
+                <a class="btn-control" href="controlTec.html">Saiba mais...</a>
 
             </div>
         </div>
-
-
-        <!-- <div class="carrosel">
-            <div style="background: cyan" id="img1"></div>
-            <div style="background: purple" id="img2"></div>
-            <div style="background: yellow" id="img3"></div>
-        </div> -->
-
 
 
     </div>
