--- a/site/sobre.html
+++ b/site/sobre.html
@@ -22,6 +22,7 @@
         <li class="hover"><a href="contato.html">Contato</a></li>
         <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
         <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+        <li class="hover"><a href="">login</a></li>
       </ul>
     </div>
     <div class="laboratorio">
