Mudando conteudo da pagina .ControlTec para a Home

--- a/site/index.html
+++ b/site/index.html
@@ -45,8 +45,25 @@
 
             </div>
         </div>
-
-
+    </div>
+    <div class="infoProject3">
+        <div class="project3">
+            <h1>Diferencias</h1>
+            <ul>
+                <li><i class="fa fa-download" aria-hidden="true"></i>
+                    <h3>Baixe</h3>
+                    <p>Adquira nosso produto de Gerenciamento</p>
+                </li>
+                <li><i class="fa fa-tools" aria-hidden="true"></i>
+                    <h3>Instale</h3>
+                    <p>Implemente em sua Instituição</p>
+                </li>
+                <li><i class="fa fa-globe" aria-hidden="true"></i>
+                    <h3>Descubra</h3>
+                    <p>Tenha em suas mãos, o controle</p>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="footer">
         <div class="footer-content">
