--- a/site_institucional/index.html
+++ b/site_institucional/index.html
@@ -23,7 +23,7 @@
                 <li class="hover"><a href="contato.html">Contato</a></li>
                 <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
-                <li class="hover"><a href="">login</a></li>
+                <li class="hover"><a href="../Dashboard/login.html">login</a></li>
             </ul>
         </div>
         <div class="laboratorio">
