Adicionando página de Maquinas

--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -7,8 +7,7 @@
     <title>Dashboard Mind6</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/menu.css">
-    <script src="./js/menu.js"></script>
-    <script src="./js/pages.js"></script>
+    <link rel="stylesheet" href="css/machines.css">
 </head>
 
 <body>
@@ -29,7 +28,7 @@
 
                     <div class="icons-links">
                         <li><a href="#"><i class="fas fa-laptop"></i></a></li>
-                        <a href="#">
+                        <a href="machines.html">
                             <p class="link">MÁQUINAS</p>
                         </a>
                     </div>
