--- a/Sites/Dashboard/home.html
+++ b/Sites/Dashboard/home.html
@@ -26,7 +26,7 @@
 
                 <div class="icons-links">
                     <li><a href="#"><i class="fas fa-laptop"></i></a></li>
-                    <a href="#">
+                    <a href="machines.html">
                         <p class="link">MÁQUINAS</p>
                     </a>
                 </div>
