Adicionando botões de redirecionamento

--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -27,16 +27,9 @@
                     </div>
 
                     <div class="icons-links">
-                        <li><a href="#"><i class="fas fa-laptop"></i></a></li>
+                        <li class="selected"><a href="#"><i class="fas fa-laptop"></i></a></li>
                         <a href="machines.html">
                             <p class="link">MÁQUINAS</p>
-                        </a>
-                    </div>
-
-                    <div class="icons-links">
-                        <li><a href="#"><i class="fas fa-chart-line"></i></a></li>
-                        <a href="#">
-                            <p class="link">DASHBOARD</p>
                         </a>
                     </div>
 
@@ -62,6 +55,7 @@
             <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
         </header>
         <div class="page dashboard">
+            <i class="fas fa-arrow-left dashboard__return-btn" onclick="window.history.back()"></i>
             <div class="dashboard__box-components">
 
                 <div class="dashboard__box-components__component">CPU</div>
