Modificações Web Client. Padronização de cores e ajustes de espaçamento

--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -89,6 +89,6 @@
 
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="./simpleheat.js"></script>
-<script src="charts.js"></script>
-<script src="heatmap.js"></script>
+<script src="js/charts.js"></script>
+<script src="js/heatmap.js"></script>
+<script src="js/simpleheat.js"></script>
