--- a/Sites/Dashboard/login.html
+++ b/Sites/Dashboard/login.html
@@ -16,7 +16,7 @@
 
         <div class="right__login">
             <img src="./images/Logo-DotControlTec.png" alt="">
-            <form action="dashboard.html" id="right__auth">
+            <form action="home.html" id="right__auth">
                 <span id="right__span-titulo">Entre com sua conta</span> <br> <br>
                 <input placeholder="nome@example.com" type="email" id="right__email" name="email" class="right__input">
                 <br>
