--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -21,7 +21,7 @@
                 <ul class="links-list">
                     <div class="icons-links">
                         <li><a href="#"><i class="fas fa-chalkboard-teacher"></i></a></li>
-                        <a href="#">
+                        <a href="rooms.html">
                             <p class="link">SALAS</p>
                         </a>
                     </div>
@@ -65,11 +65,20 @@
 
             </div>
             <div class="dashboard__box-main-grafics">
-                <div class="dashboard__box-main-grafics__container-info">
-                    <div class="dashboard__box-main-grafics__container-info__info"></div>
-                    <div class="dashboard__box-main-grafics__container-info__info"></div>
+                <h2 class="dashboard__box-main-grafics__title">Informações gerais de Hardware</h2>
+                <img class="dashboard__box-main-grafics__img-processor" src="images/imgProcessor.png" alt="">
+                <div class="dashboard__box-main-grafic__item">
+                    Sistema Operacional: Microsoft Windows 10;
                 </div>
-                <div class="dashboard__box-main-grafics__info-main"></div>
+                <div class="dashboard__box-main-grafic__item">
+                    Processador: AMD Ryzen 9 5900X CPU 2.60GHz
+                </div>
+                <div class="dashboard__box-main-grafic__item">
+                    Cores: 5
+                </div>
+                <div class="dashboard__box-main-grafic__item">
+                    Identificador de Processador: AMD 64bits Family Ryzen
+                </div>
             </div>
             <div class="dashboard__use-grafic">
                 <canvas id="myChart" height="100%"></canvas>
@@ -78,6 +87,7 @@
                 <canvas id="myChart2" height="100%"></canvas>
             </div>
             <div class="dashboard__heat-map">
+                <h3 class="dashboard__heat-map__title">Mapa de Calor</h3>
                 <canvas id="heatMap" class="dashboard__heat-map__print-heat" width="819px" height="500px"></canvas><img
                     src="images/motherboard.png" class="dashboard__heat-map__motherboard" alt="">
             </div>
@@ -90,5 +100,5 @@
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script src="js/charts.js"></script>
-<script src="js/heatmap.js"></script>
-<script src="js/simpleheat.js"></script>
+<script src="./js/simpleheat.js"></script>
+<script src="./js/heatmap.js"></script>
