--- a/Sites/Dashboard/rooms.html
+++ b/Sites/Dashboard/rooms.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Mind6</title>
-    <link rel="stylesheet" href="css/dashboard.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <title>Salas - MIND6</title>
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 
 <body>
-    <!-- <button class="menu__close" onclick="alternMenu()">Fechar</button> -->
     <header class="menu" id="menuBar" style="left: 0px;">
-        <img href="home.html" src="./images/Logo-DotControl-Tec-white.png" class="logo" alt="Imagem Logo">
+        <img onclick="window.location = 'home.html'" src="./images/Logo-DotControl-Tec-white.png" class="logo"
+            alt="Imagem Logo">
         <div class="line"></div>
         <div class="back-icons-menu">
             <ul class="links-list">
                 <div class="icons-links">
-                    <li><a href="#"><i class="fas fa-chalkboard-teacher"></i></a></li>
+                    <li class="selected"><a href="#"><i class="fas fa-chalkboard-teacher"></i></a></li>
                     <a href="rooms.html">
                         <p class="link">SALAS</p>
                     </a>
                 </div>
 
-                <div class="icons-links ">
+                <div class="icons-links">
                     <li><a href="#"><i class="fas fa-laptop"></i></a></li>
                     <a href="machines.html">
                         <p class="link">MÁQUINAS</p>
@@ -51,16 +50,10 @@
 
         <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
     </header>
-
-
-    <div class="container home" id="containerTeste">
-        <img src="./images/MIND6-logo-black-564px.png" class="home__logo" alt="Imagem Logo">
-    </div>
-    <div class="dashboard">
+    <div class="page rooms">
 
     </div>
 </body>
 
 </html>
-
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
