Começando responsividade do menu e adicionando conteudo na página de salas

--- a/Sites/Dashboard/machines.html
+++ b/Sites/Dashboard/machines.html
@@ -18,7 +18,7 @@
             <ul class="links-list">
                 <div class="icons-links">
                     <li><a href="rooms.html"><i class="fas fa-chalkboard-teacher"></i></a></li>
-                    <a href="">
+                    <a href="rooms.html">
                         <p class="link">SALAS</p>
                     </a>
                 </div>
