--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="client-page">
-        <!-- <button class="menu__close" onclick="alternMenu()">Fechar</button> -->
+
         <header class="menu" id="menuBar" style="left: 0px;">
+            <button onclick="Menu()" class="menu__btn menu__btn-close">X</button>
             <img onclick="window.location = 'home.html'" src="./images/Logo-DotControl-Tec-white.png" class="logo"
                 alt="Imagem Logo">
             <div class="line"></div>
@@ -55,6 +56,7 @@
             <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
         </header>
         <div class="page dashboard">
+            <button onclick=" Menu()" class="menu__btn"><i class="fas fa-bars menu__btn-open"></i></button>
             <i class="fas fa-arrow-left dashboard__return-btn" onclick="window.history.back()"></i>
             <div class="dashboard__box-components">
 
@@ -98,6 +100,7 @@
 </html>
 
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
+<script src="./js/menu.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script src="js/charts.js"></script>
 <script src="./js/simpleheat.js"></script>
