--- a/Sites/Dashboard/rooms.html
+++ b/Sites/Dashboard/rooms.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <input type="checkbox">MENU</input>
-    <header class="menu" id="menuBar" style="left: 0px;">
 
+    <header class="menu" id="menuBar">
+        <button onclick="Menu()" class="menu__btn menu__btn-close">X</button>
         <img onclick="window.location = 'home.html'" src="./images/Logo-DotControl-Tec-white.png" class="logo"
             alt="Imagem Logo">
         <div class="line"></div>
@@ -44,7 +44,9 @@
         <div class="line2"></div>
 
         <div class="contact-shapes">
+            <h3 class="contact-shapes__title">CONTATO</h3>
             <ul class="contact-list">
+
                 <li class="contact-list__contact" class="link-contact">TELEFONE</li>
                 <li class="contact-list__contact" class="link-contact">EMAIL</li>
                 <li class="contact-list__contact" class="link-contact">HELP DESK</li>
@@ -54,6 +56,7 @@
         <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
     </header>
     <div class="page rooms">
+        <button onclick=" Menu()" class="menu__btn"><i class="fas fa-bars menu__btn-open"></i></button>
         <div class="title-rooms">SALAS</div>
         <div class="box-rooms" id="Rooms">
 
@@ -63,13 +66,12 @@
 
 </html>
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
-
+<script src="./js/menu.js"></script>
 <script>
     function SetRooms() {
         for (i = 0; i < 30; i++) {
             Rooms.innerHTML += `<div class='box-rooms__room'> SALA ${i + 1}</div`;
         }
     }
-
     SetRooms();
 </script>
